# frpc-service

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: publish.yaml
src/: app.rs  config.rs  dialog.rs  download.rs  frpc.rs  frpc_mg.rs  icons.rs  interactive.rs  logger.rs  main.rs  message.rs  service.rs  sidebar.rs  theme.rs
src/pages/: config_editor.rs  config_list.rs  mod.rs  settings.rs
themes/: custom-dark.json  dark.json  light.json  ocean-blue.json  sunset.json
