[package]
name = "frpc_service"
version = "1.0.1"
edition = "2021"

[dependencies]
windows-service = "0.8.0"
windows = { version = "0.62.0", features = ["Win32_System_Services", "Win32_Security", "Win32_UI_WindowsAndMessaging", "Win32_Security_Authorization"] }
log = "0.4.22"
log4rs = "1.3.0"
chrono = "0.4.38"
anyhow = "1.0.86"
fs_extra = "1.3.0"
strip-ansi-escapes = "0.2.0"