[package]
name = "frpdesk"
version = "1.4.0"
edition = "2021"

[dependencies]
windows-service = "0.8.0"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = ["tree-sitter-toml"] }
log = "0.4.22"
log4rs = "1.3.0"
chrono = "0.4.38"
anyhow = "1.0.86"
strip-ansi-escapes = "0.2.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[build-dependencies]
winres = "0.1"
